<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/top_5_events_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/top_5_events_section" />

        <FrameLayout
            android:id="@+id/all_events_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/all_events_section" />

        <FrameLayout
            android:id="@+id/top_5_products_services_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/top_5_products_services_section" />

        <FrameLayout
            android:id="@+id/all_products_services_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/all_products_services_section" />

    </LinearLayout>
</ScrollView>
