<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#f5f5f5"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient_background"
        android:padding="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_marginBottom="15dp">

            <ImageView
                android:src="@drawable/logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/logo"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="70dp"
                android:text="@string/report_user"
                android:textColor="#ebebeb"
                android:textSize="18sp" />

            <Button
                android:id="@+id/close_report_button"
                android:text="@string/x"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="20sp"
                android:textColor="#ebebeb"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <EditText
            android:id="@+id/reason_input"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/type_your_reason_for_reporting"
            android:background="#ebebeb"
            android:padding="10dp"
            android:textColor="#3f3f3f"
            android:gravity="top|start"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/submit_report_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_report"
            android:layout_gravity="center"
            android:background="@drawable/rounded_report_button"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>
